# aniaft-rewrite

./: .gitignore  CMakeLists.txt  Makefile  aft2d.cpp  aft2d.h  aniaft.i  boundary.cpp  boundary.h  crv_model.c  demo.c  demo.ipynb  geometry.cpp  graph.f  main.cpp  main.f  main_boundary_wing.c  memory.cpp  memory.h  memory2.cpp  memory2.h  mesh.cpp  mesh.h  metric.h  refine.cpp  refine.h  refine2.cpp  refine2.h  region.cpp  region.h  region2.cpp  region2.h  setup.cfg  setup.py  struct.cpp  struct.h  struct2.cpp  struct2.h  test.py  test_driver.cpp  tree.cpp  (+10 more)
